add more recieps

--- a/recipes/honey-chicken.html
+++ b/recipes/honey-chicken.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotpot</title>
+    <title>Honey Grilled Chicken Thighs</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hotpot</h1>
-    <img src="./hot-pot.jpg" alt="Hotpot">
+    <h1>Honey Grilled Chicken Thighs</h1>
+    <img src="./image/honey-chicken.jpg" alt="honey-chicken">
     <div>
         <p>Chinese Hot Pot is an interactive meal in which diners sit around a simmering pot of soup at the center of the table with various raw ingredients—meat, seafood, vegetables, tofu, and starches—in thin slices or small pieces for quick cooking.</p>
         <p>Diners can add whatever they like to the boiling liquid. They can then retrieve cooked food items from the pot with wire ladles, and flavor them with individual dipping sauces.</p>     
@@ -19,6 +19,36 @@
         <ul>
             <li>sliced beef sirloin</li>
             <li>sliced lamb</li>
+            食材🥬
+鸡腿
+柠檬1个
+小番茄适量
+土豆适量
+大蒜1个
+迷迭香2根
+
+腌料🔥
+料酒2勺
+生抽2勺
+蚝油1勺
+蜂蜜1勺
+蒜末1勺
+海盐9g（2勺）
+黑胡椒1勺
+生姜3片
+
+步骤🥒
+1.腌制鸡腿（至少1小时）
+2. 小西红柿对半切，土豆切块，柠檬切片
+
+3.将鸡腿和步骤2的材料平铺在烤盘里（会吃蒜的可以放一个
+4.放入烤箱，烤制210摄氏度，40分钟即可
+
+tips✨
+1.腌制鸡腿的时间越长越入味
+2.可以另外添加喜欢的配菜进去（玉米，红薯等）
+3.烤鸡腿的温度需要根据自己烤箱的火力而更改哈（已经有家人做了，但是因为每个烤箱的火力不一样，导致烤焦）
+
     </div>
 
     <div>
