--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>New Year Dinner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/hotpot.html">Hotpot</a>
+    <h1>2024 New Year Dinner Recipes</h1>
+    <img src="./recipes/image/dinner.jpg" alt="Odin Recipes">
+
+    <ul>
+        <li><a href="recipes/honey-chicken.html">Honey Grilled Chicken Thighs</a></li>
+        <li><a href="recipes/beef-bone-soup.html">Beef Bone Soup</a></li>
+        <li><a href="recipes/pineapple-fried-rice.html">Pineapple Fried Rice</a></li>
+        <li><a href="recipes/fried-squid.html">Fried Squid</a></li>
+    </ul>
+    
 </body>
 </html>
