--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>2024 New Year Dinner Recipes</h1>
     <img src="./recipes/image/dinner.jpg" alt="Odin Recipes">
-
+    <h2>Menu</h2>
     <ul>
         <li><a href="recipes/honey-chicken.html">Honey Grilled Chicken Thighs</a></li>
         <li><a href="recipes/beef-bone-soup.html">Beef Bone Soup</a></li>
